# django_DRF

./: .env_sample  pyproject.toml
config/: settings.py  urls.py
main/: models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
main/migrations/: 0001_initial.py  0002_delete_user.py  0003_initial.py  0004_payment.py  0005_lesson_course.py  0006_course_owner_lesson_owner_alter_payment_owner.py  0007_subscription.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_city_and_more.py  0003_alter_user_options.py  0004_user_role.py
