[tool.poetry]
name = "django-drf"
version = "0.1.0"
description = ""
authors = ["ppolindrom <ipollyce@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
pillow = "^10.0.1"
djangorestframework = "^3.14.0"
django-filter = "^23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
